--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,9 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-2">Address</p>
-                                <h3 class="mb-0">123 Street, New York, USA</h3>
+                                <h3 class="mb-0" style="color:#2078a4">Second Floor, AJ Nidhi Complex, opp. Aparna Cyber Life
+                                    Nallagandla, Serilingampalle (M),
+                                    Telangana 500019</h3>
                             </div>
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4 mb-4">
@@ -143,7 +145,7 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-2">Call Us Now</p>
-                                <h3 class="mb-0">+012 345 6789</h3>
+                                <h3 class="mb-0" style="color:#2078a4" >+91-8437 222 333</h3>
                             </div>
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4">
@@ -152,13 +154,14 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-2">Mail Us Now</p>
-                                <h3 class="mb-0">info@example.com</h3>
+                                <h3 class="mb-0" style="color:#2078a4">
+                                    info@ochron.co.in</h3>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <!-- <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -200,8 +203,7 @@
     <!-- Google Map Start -->
     <div class="container-xxl pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <iframe class="w-100 mb-n2" style="height: 450px;"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-            frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+         src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15223.661953701501!2d78.29929727817249!3d17.463758603780658!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSecond%20Floor%2C%20AJ%20Nidhi%20Complex%2C%20opp.%20Aparna%20Cyber%20Life%20Nallagandla%2C%20Serilingampalle%20(M)%2C%20Telangana%20500019!5e0!3m2!1sen!2sin!4v1714654501353!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <!-- Google Map End -->
 
