--- a/index.html
+++ b/index.html
@@ -642,18 +642,18 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Hi. Ochron team crafted our newly built 3 bhk interior designs and it's execution. Initially, we were skeptical in choosing Ochron, as it appeared like a startup with young team. However, after having detailed meetings with their principal designer Nikitha and Execution Head Venkat, we were convinced and took a call to go ahead with them. It appeared as a high risk intially, as the flat construction got delayed and it has an impact on interior designs and delivery.</p>
+                    <h3>Ramlingeswara Rao Balla</h3>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Extremely satisfied and happy over choosing Ochron for my 3BHK flat design and interior work. We were thoroughly impressed by our designer  Mr.Prithvi's technical and communication skills throughout the process. And cant thank enough …More</p>
+                    <h3>Kalyan Mangena</h3>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item text-center" data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>">
-                    <p class="fs-5">Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                    <h3>Client Name</h3>
+                    <p class="fs-5">Such a wonderful experience with them. Contacted Ochron after seeing my friend's house in Manikonda. I just loved their designs and is very budget friendly. Totally satisfied with their services right from the start till handover. These guys will go places in future.</p>
+                    <h3>Ram Sharma</h3>
                     <span class="text-primary">Profession</span>
                 </div>
             </div>      
