--- a/modular-kitchen.html
+++ b/modular-kitchen.html
@@ -105,12 +105,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-1 text-white animated slideInDown">Members</h1>
+            <h1 class="display-1 text-white animated slideInDown">modular-kitchen</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Members</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="service.html">Services</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Living Room</li>
                 </ol>
             </nav>
         </div>
