--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid p-0  wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
                 <img class="img-fluid" src="img/carousel-1.jpg" alt="">
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                <img class="img-fluid" src="img/carousal-3.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -158,7 +158,7 @@
     
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" style="background-color:#f2df56 ;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -170,8 +170,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
-                    <p>At Ochron Interiors, we believe that every space has the potential to become a masterpiece. With a passion for creativity and a commitment to excellence, we specialize in transforming interiors into captivating environments that reflect our clients' unique personalities and aspirations.</p>
-                    <p class="mb-4">Our team of experienced designers is dedicated to delivering tailored solutions that exceed expectations. From conceptualization to realization, we collaborate closely with our clients to understand their vision, preferences, and requirements. Through meticulous attention to detail and innovative design techniques, we breathe life into spaces, ensuring they are not only aesthetically stunning but also functional and practical.</p>
+                    <p style="color: #854132; font-weight: bold;">At Ochron Interiors, we believe that every space has the potential to become a masterpiece. With a passion for creativity and a commitment to excellence, we specialize in transforming interiors into captivating environments that reflect our clients' unique personalities and aspirations.</p>
+                    <p class="mb-4" style="color: #854132;">Our team of experienced designers is dedicated to delivering tailored solutions that exceed expectations. From conceptualization to realization, we collaborate closely with our clients to understand their vision, preferences, and requirements. Through meticulous attention to detail and innovative design techniques, we breathe life into spaces, ensuring they are not only aesthetically stunning but also functional and practical.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
                             <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
