--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <h4 class="section-title">About Us</h4>
                     <h1 class="display-5 mb-4">A Creative Architecture Agency For Your Dream Home</h1>
                     <p style="color: #854132; font-weight: bold;">At Ochron Interiors, we believe that every space has the potential to become a masterpiece. With a passion for creativity and a commitment to excellence, we specialize in transforming interiors into captivating environments that reflect our clients' unique personalities and aspirations.</p>
-                    <p class="mb-4" style="color: #854132;">Our team of experienced designers is dedicated to delivering tailored solutions that exceed expectations. From conceptualization to realization, we collaborate closely with our clients to understand their vision, preferences, and requirements. Through meticulous attention to detail and innovative design techniques, we breathe life into spaces, ensuring they are not only aesthetically stunning but also functional and practical.</p>
+                    <p class="mb-4" style="color: #854132; font-weight: bold;">Our team of experienced designers is dedicated to delivering tailored solutions that exceed expectations. From conceptualization to realization, we collaborate closely with our clients to understand their vision, preferences, and requirements. Through meticulous attention to detail and innovative design techniques, we breathe life into spaces, ensuring they are not only aesthetically stunning but also functional and practical.</p>
                     <div class="d-flex align-items-center mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center border border-5 border-primary" style="width: 120px; height: 120px;">
                             <h1 class="display-1 mb-n2" data-toggle="counter-up">10</h1>
@@ -309,13 +309,13 @@
 
 
     <!-- Feature Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" style="background-color:#a7c3de ;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h4 class="section-title">Why Choose Us!</h4>
                     <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">Our design process is very simple. We listen to you, understand what you need, and come up with the best designs. Before you realize it, you will be walking into your dream home with smiling faces.</p>
+                    <p class="mb-4" >Our design process is very simple. We listen to you, understand what you need, and come up with the best designs. Before you realize it, you will be walking into your dream home with smiling faces.</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
@@ -729,7 +729,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" style="background-color:;">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Testimonial</h4>
