--- a/living-room.html
+++ b/living-room.html
@@ -122,34 +122,54 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title">Why Choose Us!</h4>
-                    <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                    <div class="row g-4">
+                    <h4 class="section-title"> Live Life King Size!</h4>
+                    <h1 class="display-5 mb-4">Living Room Designing</h1>
+                    <p class="mb-2">
+                        "Transform your living space into a haven of comfort and style with Ochron Interior's expert touch. Elevate every corner with timeless elegance and personalized design, where luxury meets functionality seamlessly."</p>
+                    <p class="mb-4">Orchron works on:</p>
+                        <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/tvunit-1.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Design Approach</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>TV Units</h3>
+                                    <p class="mb-0">Revolutionize your entertainment space with innovative TV unit designs, marrying functionality with modern aesthetics for an unparalleled viewing experience.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/spacingfurniture-1.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>Space Saving Furniture</h3>
+                                    <p class="mb-0">Maximize your living space with our ingenious, space-saving furniture solutions, where practicality meets chic design effortlessly.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/wallpaint-1.png" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Project Management</h3>
-                                    <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                    <h3>Wall Paint</h3>
+                                    <p class="mb-0">Elevate your walls with exquisite painting services, bringing a touch of artistry and sophistication to every corner of your space.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="d-flex align-items-start">
+                                <img class="flex-shrink-0" src="img/falscealing-1.png" alt="Icon">
+                                <div class="ms-4">
+                                    <h3>False Ceilings</h3>
+                                    <p class="mb-0">Transform your ceiling into a statement piece with stunning false ceiling designs, elevating your space with modern elegance and architectural flair.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="d-flex align-items-start">
+                                <img class="flex-shrink-0" src="img/light-1.png" alt="Icon">
+                                <div class="ms-4">
+                                    <h3>Lighting</h3>
+                                    <p class="mb-0">Illuminate your space with Ochron Interior's captivating lighting solutions, blending functionality with artistic brilliance to create an ambiance that enchants and inspires.</p>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +177,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img">
-                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/carousel-1.jpg" alt="">
                         <img class="img-fluid" src="img/about-1.jpg" alt="">
                     </div>
                 </div>
@@ -165,7 +185,32 @@
         </div>
     </div>
     <!-- Feature End -->
-        
+      <!--start-->  
+      <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="feature-img">
+                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                    </div> 
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="feature-img">
+                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                    </div> 
+                </div>
+                <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="feature-img">
+                        <img class="img-fluid" src="img/about-2.jpg" alt="">
+                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                    </div> 
+                </div>
+            </div>
+        </div>
+    </div>
+      <!--end-->
 
     <!--whatsapp-->
 <div class="whatsapp">
