--- a/service.html
+++ b/service.html
@@ -332,12 +332,10 @@ background-color:
                     <a class="btn btn-link" href="appointment.html">Book Appointment</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Newsletter</h3>
-                    <p>"Ochron design is turning empty spaces into vibrant stories of style and comfort."</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                    <h3 class="text-light mb-4">Ochron Interiors</h3>
+                    <img src="./img/icons/logo.webp" class="img-fluid mt-4" alt="">
+                   
+                    
                 </div>
             </div>
         </div>
