--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <!-- About End -->
 <!-- Facts Start -->
-<div class="container-xxl py-5">
+<div class="container-xxl py-5 our">
     <div class="container pt-5">
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -227,7 +227,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5 services">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h4 class="section-title">Our Services</h4>
@@ -253,7 +253,7 @@
                             <img class="mb-4" src="img/bedroom-interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Bedroom</h3>
                             <p class="mb-4">Wardrobes, TV Unit, Bed with Storage, Dressing Unit, Study Unit</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="bedroom.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                             <img class="mb-4" src="img/modular-kitchen-interior-design-services.webp" alt="Icon">
                             <h3 class="mb-3">Kitchen</h3>
                             <p class="mb-4">Countertops, Backsplashes, Accessories, Shutters, Storage</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="modular-kitchen.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -274,9 +274,9 @@
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/innovative-storage-design-solutions.webp" alt="Icon">
                             <h3 class="mb-3">
-                                Innovative Storage</h3>
+                                Wardrobe</h3>
                             <p class="mb-4">Janitor Unit, Skirting Drawer, Pantry Pull Out, Appliance Garage, Hidden Bar Cabinet, Magic Corner</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="wardrobe.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -285,9 +285,9 @@
                         <img class="bg-img" src="img/Deco.webp" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/interior-design-services.webp" alt="Icon">
-                            <h3 class="mb-3">Interior Design Services</h3>
+                            <h3 class="mb-3">Space Saving Furniture</h3>
                             <p class="mb-4">False Ceiling, Wall Panelling, Decor Accents, Lighting, Furnishing, Appliances</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="space-saving-furniture.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -309,7 +309,7 @@
 
 
     <!-- Feature Start -->
-    <div class="container-xxl py-5" style="background-color:#a7c3de ;">
+    <div class="container-xxl py-5 why">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -579,30 +579,11 @@
 </div>
 
 <style>
-    .whatsapp {
-position: fixed;
-bottom: 10px;
-left: 13px;
-z-index: 999;
-}
-.whatsapp i {
-font-size: 40px;
-color: 
-white;
-background-color: #2078a4;
-padding: 8px;
-border-radius: 50%;
-box-shadow: 2px 3px 4px rgba(32,120,164,255);
-}
-.whatsapp:hover i {
-color: #000;
-background-color: 
-#2078a4;
-}
+ 
 </style>
 <!--whatsapp-->
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid  text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -635,7 +616,7 @@ background-color:
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Ochron Interiors</h3>
                     <img src="./img/icons/logo.webp" class="img-fluid mt-4" alt="">
-                    <div class="d-flex p-4">
+                    <div class="d-flex pt-4">
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.facebook.com/OchronInteriors"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.instagram.com/ochrondesigns/"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://twitter.com/OchronD"><i class="fab fa-twitter"></i></a>
