--- a/service.html
+++ b/service.html
@@ -329,7 +329,7 @@ background-color:
                     <h3 class="text-light mb-4">Ochron Interiors</h3>
                     <img src="./img/icons/logo.webp" class="img-fluid mt-4" alt="">
                    
-                    <div class="d-flex p-4">
+                    <div class="d-flex pt-4">
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.facebook.com/OchronInteriors"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.instagram.com/ochrondesigns/"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://twitter.com/OchronD"><i class="fab fa-twitter"></i></a>
