--- a/design-gallery.html
+++ b/design-gallery.html
@@ -367,30 +367,11 @@
 </div>
 
 <style>
-    .whatsapp {
-position: fixed;
-bottom: 10px;
-left: 13px;
-z-index: 999;
-}
-.whatsapp i {
-font-size: 40px;
-color: 
-white;
-background-color: #2078a4;
-padding: 8px;
-border-radius: 50%;
-box-shadow: 2px 3px 4px rgba(32,120,164,255);
-}
-.whatsapp:hover i {
-color: #000;
-background-color: 
-#2078a4;
-}
+    
 </style>
 <!--whatsapp-->
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
@@ -424,7 +405,7 @@ background-color:
                     <h3 class="text-light mb-4">Ochron Interiors</h3>
                     <img src="./img/icons/logo.webp" class="img-fluid mt-4" alt="">
                    
-                    <div class="d-flex p-4">
+                    <div class="d-flex pt-4">
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.facebook.com/OchronInteriors"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://www.instagram.com/ochrondesigns/"><i class="fab fa-instagram"></i></a>
                         <a class="btn btn-sm-square btn-outline-body me-2" href="https://twitter.com/OchronD"><i class="fab fa-twitter"></i></a>
