--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
     <div class="container">
         <div class="row g-5">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                <h4 class="section-title">Orchon</h4>
+                <h4 class="section-title">Ochron</h4>
                 <h1 class="display-5 mb-4">Why You Should Trust Us? Learn More About Us!</h1>
                 <p class="mb-4">Our design process is very simple. We listen to you, understand what you need, and come up with the best designs. Before you realize it, you will be walking into your dream home with smiling faces.</p>
                 <div class="row g-4">
