--- a/contact.html
+++ b/contact.html
@@ -132,9 +132,9 @@
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 55px; height: 55px;">
                                 <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
-                            <div class="ms-4">
+                            <div class="ms-4" style="color:white">
                                 <p class="mb-2">Address</p>
-                                <h3 class="mb-0" style="color:#2078a4">Second Floor, AJ Nidhi Complex, opp. Aparna Cyber Life
+                                <h3 class="mb-0">Second Floor, AJ Nidhi Complex, opp. Aparna Cyber Life
                                     Nallagandla, Serilingampalle (M),
                                     Telangana 500019</h3>
                             </div>
@@ -143,18 +143,18 @@
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 55px; height: 55px;">
                                 <i class="fa fa-phone-alt text-primary"></i>
                             </div>
-                            <div class="ms-4">
+                            <div class="ms-4" style="color:white">
                                 <p class="mb-2">Call Us Now</p>
-                                <h3 class="mb-0" style="color:#2078a4" >+91-8437 222 333</h3>
+                                <h3 class="mb-0"  >+91-8437 222 333</h3>
                             </div>
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4">
                             <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-dark" style="width: 55px; height: 55px;">
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
-                            <div class="ms-4">
-                                <p class="mb-2">Mail Us Now</p>
-                                <h3 class="mb-0" style="color:#2078a4">
+                            <div class="ms-4" style="color:white">
+                                <p class="mb-2">Mail U s Now</p>
+                                <h3 class="mb-0" >
                                     info@ochron.co.in</h3>
                             </div>
                         </div>
