--- a/index.html
+++ b/index.html
@@ -358,32 +358,28 @@
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-2.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/Warranty.webp" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Design Approach</h3>
-                                    <p class="mb-0">Approach embraces a harmonious fusion of functionality, creativity,
-                                        and personalization to craft spaces that resonate with individuality and inspire
-                                        every inhabitant.</p>
+                                    <h3>5-year warranty</h3>
+                                    <p class="mb-0">We use high-quality material that lasts for a lifetime. Be rest assured!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-3.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/designexperts.webp" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Innovative Solutions</h3>
-                                    <p class="mb-0">Redefine traditional boundaries, infusing spaces with fresh
-                                        perspectives and transformative designs that captivate the imagination.</p>
+                                    <h3>Unique Designs</h3>
+                                    <p class="mb-0">Our designs are unique and exhibit class and emotions - together!</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/icons/icon-4.png" alt="Icon">
+                                <img class="flex-shrink-0" src="img/installationservices.webp" alt="Icon">
                                 <div class="ms-4">
-                                    <h3>Project Management</h3>
-                                    <p class="mb-0">Ensures seamless execution, from conception to completion,
-                                        delivering tailored interiors that exceed expectations.</p>
+                                    <h3>Here for you</h3>
+                                    <p class="mb-0">You can shoot your questions and we will be happy to help, even post-installation!</p>
                                 </div>
                             </div>
                         </div>
@@ -439,7 +435,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/l5.JPEG"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -460,7 +456,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/b7.png"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -547,6 +543,32 @@
         </div>
     </div>
     <!-- Project End -->
+    <section class="videos pb-2" style="background-color: white">
+        <h2 class="work-videos text-center mb-4 section-title" 
+            >
+          Our Work Videos
+        </h2>
+        <div class="container">
+          <div class="video1 video">
+            <video controls="" muted="">
+              <source src="/img/video1.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="video2 video">
+            <video controls="" muted="">
+              <source src="/img/video2.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="video2 video">
+            <video controls="" muted="">
+              <source src="/img/video3.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+        </div>
+      </section>
 
     <div class="container-xxl design py-5">
         <div class="container">
@@ -619,7 +641,7 @@
     <style>
        
     </style>
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-5" style="background-color: bisque;">
         <h2 class="section-title text-center py-3">OUR PARTNERS</h2>
         <div class="owl-carousel part-carousel container">
 
