--- a/space-saving-furniture.html
+++ b/space-saving-furniture.html
@@ -123,13 +123,11 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h4 class="section-title"> Live Life King Size!</h4>
+                    <h4 class="section-title"> Each Sq. Ft. Matters!</h4>
                     <h1 class="display-5 mb-4">Space Saving Furniture Designing</h1>
                     <p class="mb-2">
-                        "Transform your living space into a haven of comfort and style with Ochron Interior's expert
-                        touch. Elevate every corner with timeless elegance and personalized design, where luxury meets
-                        functionality seamlessly."</p>
-                    <p class="mb-4">Orchron works on:</p>
+                        You may love a piece of furniture. But, you may not have just the amount of suitable space for it. Giving you what you want in the space that you have, is one of our specializations!</p>
+                    <p class="mb-4">Ochron works on:</p>
                     <div class="row g-4">
                         <div class="col-12">
                             <div class="d-flex align-items-start">
@@ -147,8 +145,7 @@
                                 <img class="flex-shrink-0" src="img/spacingfurniture-1.png" alt="Icon">
                                 <div class="ms-4">
                                     <h3>Space Saving Furniture</h3>
-                                    <p class="mb-0">Maximize your living space with our ingenious, space-saving
-                                        furniture solutions, where practicality meets chic design effortlessly.</p>
+                                    <p class="mb-0">Maximize your living space with our ingenious, space-saving furniture solutions, where practicality meets chic design effortlessly.</p>
                                 </div>
                             </div>
                         </div>
@@ -173,17 +170,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12">
-                            <div class="d-flex align-items-start">
-                                <img class="flex-shrink-0" src="img/light-1.png" alt="Icon">
-                                <div class="ms-4">
-                                    <h3>Lighting</h3>
-                                    <p class="mb-0">Illuminate your space with Ochron Interior's captivating lighting
-                                        solutions, blending functionality with artistic brilliance to create an ambiance
-                                        that enchants and inspires.</p>
-                                </div>
-                            </div>
-                        </div>
+                      
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -199,11 +186,15 @@
     <!--start-->
     <div class="container-xxl py-5 gallery">
         <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h4 class="section-title">Our Services</h4>
+                <h1 class="display-5 mb-4">Our Latest Space-Saving-Furniture Succeed Designs</h1>
+            </div>
             <div class="row g-5">
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s1.jpg" class="size_img2" />
+                        <img src="img/ss8.webp" class="size_img2" />
 
 
                     </div>
@@ -212,7 +203,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s2.jpg" class="size_img2" />
+                        <img src="img/ss1.png" class="size_img2" />
 
 
                     </div>
@@ -220,7 +211,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s3.webp" class="size_img2" />
+                        <img src="img/ss2.png" class="size_img2" />
 
 
                     </div>
@@ -228,7 +219,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s4.jpg" class="size_img2" />
+                        <img src="img/ss3.jpg" class="size_img2" />
 
 
                     </div>
@@ -236,7 +227,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s5.png" class="size_img2" />
+                        <img src="img/ss4.png" class="size_img2" />
 
 
                     </div>
@@ -244,7 +235,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s6.png" class="size_img2" />
+                        <img src="img/ss6.png" class="size_img2" />
 
 
                     </div>
@@ -252,7 +243,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s7.png" class="size_img2" />
+                        <img src="img/ss5.jpg" class="size_img2" />
 
 
                     </div>
@@ -260,7 +251,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s8.JPEG" class="size_img2" />
+                        <img src="img/ss7.webp" class="size_img2" />
 
 
                     </div>
@@ -268,7 +259,7 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s9.png" class="size_img2" />
+                        <img src="img/ss9.webp" class="size_img2" />
 
 
                     </div>
@@ -276,7 +267,15 @@
                 <div class="col-md-4 ftco-animate mb-3">
 
                     <div class="menu-item2 text-center">
-                        <img src="img/s10.png" class="size_img2" />
+                        <img src="img/ss10.webp" class="size_img2" />
+
+
+                    </div>
+                </div>
+                <div class="col-md-4 ftco-animate mb-3">
+
+                    <div class="menu-item2 text-center">
+                        <img src="img/furniture-desk.webp" class="size_img2" />
 
 
                     </div>
