--- a/design-gallery.html
+++ b/design-gallery.html
@@ -307,7 +307,7 @@
 <!-- Service End -->
 
    <!-- Feature Start -->
-   <div class="container-xxl py-5">
+   <!-- <div class="container-xxl py-5">
     <div class="container">
         <div class="row g-5">
             <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -352,7 +352,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Feature End -->
 
 
