--- a/living-room.html
+++ b/living-room.html
@@ -188,6 +188,10 @@
       <!--start-->  
       <div class="container-xxl py-5">
         <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                <h4 class="section-title">Our Services</h4>
+                <h1 class="display-5 mb-4">Our Latest Living Room Succeed Designs</h1>
+            </div>
             <div class="row g-5">
                 <div class="col-md-4 ftco-animate mb-3">
 							
